--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.application.name=movie-mangement
+spring.application.name=movie-management
+google.api.key=AIzaSyD2-f4TEl5pXLOyj4JnWNF3DB72H9_uvRY
+google.cse.id=5f4d1b9c8e4b4b8a9
